--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "bundle/supertab"]
 	path = bundle/supertab
 	url = git@github.com:ervandew/supertab
+[submodule "bundle/jade"]
+	path = bundle/jade
+	url = git@github.com:digitaltoad/vim-jade.git
